# Della

./: .bumpversion.cfg  .gitignore  .gitmodules  LICENSE  README.md  defcon.toml  pyproject.toml  requirements.txt  tasks.py
.github/: ISSUE_TEMPLATE.md
della/: __init__.py  _test.py  autocomplete.py  cli.py  cli_api.py  cli_parse.py  command_parser.py  completion.py  constants.py  debugging.py  default_config.toml  della.py  init_tasks.py  input_parser.py  node.py  remote_sync.py  session_example.txt  shell.py  styles.py  task.py  task_manager.py  task_node.py  tasks.py  test.toml  tui.py
della/cli/: cli.py  shell.py
della/task_manager/: task_classes.py  task_parser.py  task_utils.py
source/: '  cli.py  dateparse.py  della.py  k_planner.toml  projects.json  requirements.txt  task_parser.py  task_utils.py
test/: par.py  test.json  test_della.py  test_scripts.py
tests/: __init__.py  test_cli.py  test_della.py  test_internals.py  test_loader.py
tests/data/: test.json  test.toml  test.yaml
