[tool.poetry]
name = "della"
version = "0.1.0"
description = "A todo list organizer that's smart enough to do the organizing part on its own"
authors = ["keagud <keagud@protonmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dateparse = "*"
toml = "^0.10.2"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
