[tool]
[tool.poetry]
name = "della"
version = "0.1.0"
homepage = "https://github.com/keagud/della"
description = "Top-level package for Della."
authors = ["Keaton Guderian <keagud@protonmail.com>"]
readme = "README.md"
license =  "BSD-3-Clause"
classifiers=[
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "della" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4"
click = "*"
dateparse = "^1.0.0"

[tool.poetry.group.dev.dependencies]
coverage = "*"
isort = "*"
pyright = "*"
ruff = "*"
pytest = ">=7.2.0"
pre-commit = "*"
black = "*"
ipython = "^8.11.0"

[tool.poetry.scripts]
della = 'della.cli:main'

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
